--- a/style.css
+++ b/style.css
@@ -75,10 +75,9 @@ label
 }
 
 .select {
-    position: relative;
     display: block;
-    width: 30em;
-    height: 3em;
+    /* width: 30em;
+    height: 3em; */
     line-height: 3;
     /* overflow: hidden; */
     border-radius: .25em;
@@ -134,6 +133,7 @@ label
     font-weight: bold;
     font-style: italic;
     padding-left: 10px;
+    margin-top: -8px;
 }
 
 .checkbox_container
@@ -157,7 +157,8 @@ label
     font-size: 25px;
     font-weight: bold;
     font-style: italic;
-    padding-left: 10px;   
+    padding: 0 15px;
+    margin-top: -8px;
 }
 
 #textarea_label
